--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <script type="module" crossorigin src="./index-QckZh_Gq.js"></script>
+    <script type="module" crossorigin src="./index-KWNLNn8w.js"></script>
     <link rel="stylesheet" crossorigin href="./index-wWxAU_rf.css">
   </head>
   <body>
